# neutrino-hd-plugins

./: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
blockads/: Makefile.in  blockads.cfg  globals.c
blockads/shellexec/: Makefile.in
clock/: Makefile.in
clock/shellexec/: Makefile.in
cooliTSclimax/: Makefile.in  cooliTSclimax.cpp
dvbsub/: Makefile.in
enigma/: Makefile.in
enigma/bitrate/: Makefile.in
enigma/dbswitch/: Makefile.in
enigma/demo/: Makefile.in
enigma/dreamdata/: Makefile.in
enigma/dreamflash/: Makefile.in
enigma/dslconnect/: Makefile.in
enigma/dsldisconnect/: Makefile.in
enigma/getset/: Makefile.in
enigma/movieplayer/: Makefile.in
enigma/ngrabstart/: Makefile.in
enigma/ngrabstop/: Makefile.in
enigma/rss/: Makefile.in
enigma/script/: Makefile.in
enigma/scummvm/: Makefile.in
enigma/weather/: Makefile.in
enigma/weather/icons/: Makefile.in
fx2/: Makefile.am  Makefile.in
fx2/bouquet/: Makefile.in
fx2/c64emu/: Makefile.in
fx2/lcdcirc/: Makefile.in
fx2/lemm/: Makefile.am  Makefile.in
fx2/lib/: Makefile.am  Makefile.in  draw.c  pig.c  rcinput.c  rcinput.h
fx2/master/: Makefile.am  Makefile.in  board.c  board.h  colors.h  somain.c
fx2/mines/: Makefile.am  Makefile.in  board.c  colors.h  somain.c
fx2/outdoor/: Makefile.in
fx2/pac/: Makefile.am  Makefile.in  maze.c  somain.c
fx2/snake/: Makefile.am  Makefile.in  snake.c  somain.c
fx2/sokoban/: Makefile.am  Makefile.in
fx2/sol/: Makefile.am  Makefile.in  solboard.c  somain.c
fx2/solitair/: Makefile.am  Makefile.in
fx2/sudoku/: Makefile.am  Makefile.in
fx2/tank/: Makefile.am  Makefile.in  board.c  colors.h  somain.c
fx2/tetris/: Makefile.am  Makefile.in
fx2/vierg/: Makefile.am  Makefile.in
fx2/yahtzee/: Makefile.am  Makefile.in
include/: Makefile.in
input/: Makefile.in  input.h  io.h
links/: Makefile.in
logomask/: Makefile.in
logomask/shellexec/: Makefile.in
mosaic/: Makefile.in
msgbox/: Makefile.in  io.h  msgbox.h
pip/: Makefile.in
pluginx/: Makefile.in
shellexec/: Makefile.in  io.h  shellexec.h
sysinfo/: Makefile.in
tuxcal/: Makefile.in
tuxcal/daemon/: Makefile.in
tuxclock/: Makefile.in
tuxclock/daemon/: Makefile.in
tuxcom/: Makefile.am  Makefile.in  tuxcom.c  tuxcom.h
tuxmail/: Makefile.am  Makefile.in  tuxmail.c
tuxtxt/: Makefile.in
tuxtxt/font/: Makefile.in
tuxwetter/: Makefile.am  Makefile.in  io.h  tuxwetter.c  tuxwetter.h
vncviewer/: Makefile.in
vncviewer/rfb/: Makefile.in
